# rust-mdipierro-nlib

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
.pmat/: context.db  dead-code-cache.json
.pmat-metrics/: commit-f51deff-meta.json
.pmat-tickets/: DEBT-001.yaml
.pmat-work/: ledger.jsonl
.pmat-work/PMAT-001/: contract.json
.pmat/context.idx/: manifest.json
.pv/: contracts.idx  contracts.idx.mtime  lint-previous.json
contracts/: binding.yaml  fourier-transform-v1.yaml  graph-algorithms-v1.yaml  integration-v1.yaml  matrix-algebra-v1.yaml  monte-carlo-v1.yaml  nonlinear-solvers-v1.yaml  optimization-v1.yaml  random-generators-v1.yaml  sorting-v1.yaml  statistics-v1.yaml
docs/roadmaps/: roadmap.yaml
docs/specifications/: rust-mdipierro-nlib-port-spec.md
examples/: fourier.rs  graph.rs  integrate.rs  matrix.rs  monte_carlo.rs  optimize.rs  parity.rs  random.rs  solve.rs  sort.rs  stats.rs
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  outcomes.json  timeout.txt  unviable.txt
mutants.out.old/diff/: src__fourier.rs_line_13_col_5_003.diff  src__fourier.rs_line_13_col_5_005.diff  src__fourier.rs_line_13_col_5_006.diff  src__fourier.rs_line_13_col_5_007.diff  src__fourier.rs_line_20_col_35.diff  (+277 more)
src/: fourier.rs  graph.rs  integrate.rs  kani_harnesses.rs  lib.rs  matrix.rs  monte_carlo.rs  optimize.rs  random.rs  solve.rs  sort.rs  stats.rs
tests/: falsify_parity.py  generate_vectors.py  golden_vectors.rs
(+413 files in other folders)
